--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "nodemon src/server.js"
   },
   "dependencies": {
-    "body-parser": "~1.18.2",
+    "body-parser": "^1.18.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
@@ -16,8 +16,5 @@
   },
   "devDependencies": {
     "nodemon": "^1.12.1"
-  },
-  "scripts": {
-    "dev": "nodemon src/server.js"
   }
 }
